--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <div id="profile-intro">
                 <div id="profile-name">Yuexuan Li 李玥萱</div>
-                <div id="profile-email">yl5181 at columbia dot edu</div>
+                <div id="profile-email">yuexuanli15 at gmail dot com </div>
                 <p>
                     Hi, I am Yuexuan Li! You can also call me Kiara.
                 </p>
