--- a/index.html
+++ b/index.html
@@ -39,16 +39,12 @@
                     Hi, I am Yuexuan Li! You can also call me Kiara.
                 </p>
                 <p>
-                    Currently pursuing a Master of Science in Mechanical Engineering at Columbia University, 
-                    and I earned my Bachelor's degree in Engineering Mechanics from Dalian University of Technology last year. 
-                    My academic journey has equipped me with a strong foundation in science and mechanics. 
-                    Furthermore, my practical experience in design and manufacturing has been cultivated through various projects during my graduate studies.
+                    Currently working at Humanoid Robot Co., Ltd based in Shanghai. 
+                    I graduated last year with a master’s degree from Columbia University. 
+                    Right now, my research focuses on imitation learning.
+                    I’ve always been super passionate about robotics and love being part of this innovative field!
                 </p>
-                <p>
-                    In my free time, I love to spend time with friends and explore new places, whether it be traveling or just checking out local stores.
-                    If you share any of my interests, don't hesitate to reach out. I am always looking for new friends and adventures!
 
-                </p>
                 <div>
 
                     <a href="https://www.linkedin.com/in/liyuexuan">
