--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </a>
                     /
 
-                    <a href="https://github.com/yuexuan-li">
+                    <a href="https://github.com/Yuexuan9">
                         Github
                     </a>
                     </a>
