--- a/index.html
+++ b/index.html
@@ -141,17 +141,35 @@
         </div>
         <div class="divider"></div>
         <div class="section" id="updates">
-            <h1>Work Experience</h1>
+            <h1>Experience</h1>
             <ul>
-                <li> <b>Sep 2021 - Oct 2021</b> Shanghai Hongchan Cultural Communication Co., Ltd
-                <br /><i>Internship</i><br />
+                <li> <b>Mar 2024 ～</b> Humanoid Robot Co., Ltd
+                <br /><i>Algorithm Engineer</i><br />
                   <p>
-                    &bull; Keywords: Data Analysis, C++
+                    &bull; Keywords: Python, Imitation Learning, Simulation Environment
                   </p>
                 <li> <b>Jul 2021 - Aug 2021</b> China Tower Corporation Limited
                 <br /><i>Internship</i><br />
                   <p>
-                    &bull; Keywords: LaTeX, Stress Analysis
+                    &bull; Keywords: ANSYS, SolidWorks, Stress Analysis
+                  </p>
+            </ul>
+            <p></p>
+            <div style="clear: both;"></div>
+        </div>
+        <div class="divider"></div>
+        <div class="section" id="updates">
+            <h1>Education</h1>
+            <ul>
+                <li> <b>2022 - 2024</b> Columbia University
+                <br /><i>MS Mechanical Engineering</i><br />
+                  <p>
+                    &bull; Keywords: Robot, Artificial Intelligence
+                  </p>
+                <li> <b>2018 - 2022</b> Dalian University of Technology
+                <br /><i>BE Engineering Mechanics</i><br />
+                  <p>
+                    &bull; Keywords: Dynamics, Finite Element Analysis
                   </p>
             </ul>
             <p></p>
@@ -164,25 +182,18 @@
                 <li> <b>Sep 2020 - Jun 2021</b> Dalian University of Technology Overseas Exchange Association
                 <br /><i>Director of Research Department</i><br />
                   <p>
-                    &bull; Led department members to conduct an investigation into development of domestic and foreign societies, and released 4 research reports, to sum up findings
-                  </p>
-                  <p>
-                    &bull; Developed skills like leadership, communication, and collaboration and improved the ability to deal with
-                    unexpected situations
+                    &bull; Led department members to conduct an investigation into development of domestic and foreign societies
                   </p>
                <li> <b>Sep 2019 - Jun 2020</b> Dalian University of Technology Students' Union
                <br /><i>Vice Director of Rights and Interests Department</i><br />
                   <p>
-                    &bull; Organized a wide range of activities on campus to provide students a platform to demonstrate personal abilities, also collect 160 pieces of various rights and interests issues, 94% of issues were solved or given feedback
+                    &bull; Organized a wide range of activities on campus to provide students a platform to demonstrate personal abilities
                   </p>
                   <p>
                     &bull; Led a team of 15 volunteers to edit and launch 14 issues of equity publications and 7 issues of equity popularization tweets, and received 40K+ viewership on WeChat
                   </p>
                <li> <b>Sep 2018 - Jun 2019</b> Dalian University of Technology Students' Union
                <br /><i>Student Officer of Liaison Department</i><br />
-                  <p>
-                    &bull; Developed a strong relations with the local companies in order to get sponsorship to support the student activities financially
-                  </p>
             </ul>
             <p></p>
             <div style="clear: both;"></div>
