--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <p>
                   In this paper, the relationship between stress and displacement of a three-bar structure with a bi-modulus of elasticity in tension and compression is investigated by using the elastic-plasticity theory, and an expression for the ultimate external load is derived for a three-bar structure with a bi-modulus of elasticity in tension and compression to maintain stability. Further calculations are carried out to analyze the different tensile yield stresses and compressive yield stresses. The calculation results show that the different modulus of elasticity in tension and compression and the asymmetric yield stress in tension and compression affect the ultimate external load of the structure, which is a safety issue of concern for engineering structures.
                 </p>
-            </div> -->
+            </div>
 
             <div style="clear: both;"></div>
         </div>
