--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                       </video>
                 </a>
                 <a class="research-proj-title">
-                  Visual Affordance — Robotic Pack and Place Tasks
+                  Visual Affordance — Robotic Pick and Place Tasks
                 </a>
                 <p>
                   In this project, I explored the Visual Affordance method for visual robotic pack-and-place tasks. 
