--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </header>
         <div id="profile">
             <div id="profile-pic">
-                <img src="/assets/image/photoshot.JPG" />
+                <img src="/assets/image/IMG_2447.JPG" />
                 <p style="text-align:left;margin-top:-15px;">Picture taken by MEGA</p>
             </div>
             <div id="profile-intro">
