--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         
         <div class="divider"></div>
         <div style="display:flex;flex-direction: column;" id="research">
-            <h1>Academic Projects</h1>
+            <h1>Projects</h1>
             <div>
                 <a class="research-thumb">
                       <video width="320" height="auto" autoplay loop muted>
@@ -122,18 +122,6 @@
                 </p>
                 <p>
                   Our team's project is an excellent example of the power of design thinking and collaboration. We identified an emerging human need and utilized new technology to create a product that addresses that need. We are proud to have made a solution that has the potential to improve the daily commute for countless individuals.
-                </p>
-            </div>
-
-            <div>
-                <a class="research-thumb">
-                  <img src="/assets/image/IMG_8514.JPG" alt="">
-                </a>
-                <a class="research-proj-title">
-                  Shake-down analysis of bi-modulus structures
-                </a>
-                <p>
-                  In this paper, the relationship between stress and displacement of a three-bar structure with a bi-modulus of elasticity in tension and compression is investigated by using the elastic-plasticity theory, and an expression for the ultimate external load is derived for a three-bar structure with a bi-modulus of elasticity in tension and compression to maintain stability. Further calculations are carried out to analyze the different tensile yield stresses and compressive yield stresses. The calculation results show that the different modulus of elasticity in tension and compression and the asymmetric yield stress in tension and compression affect the ultimate external load of the structure, which is a safety issue of concern for engineering structures.
                 </p>
             </div>
 
