--- a/index.html
+++ b/index.html
@@ -151,6 +151,19 @@
         </div>
         <div class="divider"></div>
         <div class="section" id="updates">
+            <h1>Talks</h1>
+            <ul>
+                <li> <b>2025-9-21</b> Automobile Innovation Port Conference Center, Shanghai
+                <br /><i>Overview of Robot Simulation Platforms & Practical Analysis of Isaac Lab</i><br />
+                  <p>
+                    &bull; Invited guest speaker
+                  </p>
+            </ul>
+            <p></p>
+            <div style="clear: both;"></div>
+        </div>
+        <div class="divider"></div>
+        <div class="section" id="updates">
             <h1>Activity</h1>
             <ul>
                 <li> <b>Sep 2020 - Jun 2021</b> Dalian University of Technology Overseas Exchange Association
