--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
         <div class="section" id="updates">
             <h1>Talks</h1>
             <ul>
+                <a class="research-thumb">
+                  <img src="assets/image/groupphoto.jpg" alt="">
+                </a>
                 <li> <b>2025-9-21</b> Automobile Innovation Port Conference Center, Shanghai
                 <br /><i>Overview of Robot Simulation Platforms & Practical Analysis of Isaac Lab</i><br />
                   <p>
